--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "toastr": "^2.1.4",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/jest": "^23.1.4",
+    "@types/toastr": "^2.1.35",
     "@vue/cli-plugin-eslint": "^3.2.0",
     "@vue/cli-plugin-typescript": "^3.2.0",
     "@vue/cli-plugin-unit-jest": "^3.2.0",
@@ -75,7 +77,8 @@
       "^.+\\.tsx?$": "ts-jest"
     },
     "moduleNameMapper": {
-      "^@/(.*)$": "<rootDir>/src/$1"
+      "^@/(.*)$": "<rootDir>/src/$1",
+      "\\.(css|less|sass|scss)$": "<rootDir>/__mocks__/styleMock.js"
     },
     "snapshotSerializers": [
       "jest-serializer-vue"
