--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "material-design-icons-iconfont": "^4.0.3",
     "register-service-worker": "^1.5.2",
+    "toasted": "^1.1.8",
+    "toastedjs": "0.0.2",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
+    "vuetify": "^1.4.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -29,6 +33,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "vue-cli-plugin-vuetify": "^0.4.6",
     "vue-template-compiler": "^2.5.21"
   }
 }
