--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "material-design-icons": "^3.0.1",
     "material-design-icons-iconfont": "^4.0.3",
     "register-service-worker": "^1.5.2",
     "toasted": "^1.1.8",
